tests/ui/span/borrowck-object-mutability.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-object-mutability.rs:8:5
   |
LL |     x.borrowed_mut();
   |     ^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL | fn borrowed_receiver(x: &mut dyn Foo) {
   |                          +++

error[E0596]: cannot borrow `*x` as mutable, as `x` is not declared as mutable
  --> $DIR/borrowck-object-mutability.rs:18:5
   |
LL |     x.borrowed_mut();
   |     ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | fn owned_receiver(mut x: Box<dyn Foo>) {
   |                   +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
